k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service # name of the service 
  namespace: jwt-auth
spec:
  type: ClusterIP # type of the service
  selector:
    app: myapp # selector app
    # role: backend
  ports:
  - port: 8081 # service port
    protocol: TCP   
    targetPort: 8000 # target port where the service gonna listen too.
