k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress # name of the ingress
  labels:
    name: myingress # labels
spec:
  ingressClassName: ngrok # { ngrok } ingress class name recommended
  rules:
  - host: divine-fully-ewe.ngrok-free.app # bass-more-cowbird.ngrok-free.app define it in etc/hosts on linux and on windows windows/system32/drivers/etc/hosts, add this in the hosts file fastapi.info     (what ever ip your ingress resource gets)
    http: # defining the rules
      paths:
      - pathType: Prefix
        path: / # everything that comes after /
        backend: # where the traffic should be routed, should be in the service name and port 
          service: # in this case is our fastapi-service
            name: fastapi-service # name of the service
            port:  
              number: 8081 # and the port that service listens on
